--- a/FrontEnd/src/Login/LoginPage.css
+++ b/FrontEnd/src/Login/LoginPage.css
@@ -8,19 +8,18 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-
   background-color: #222831;
   color: #f0f8ff;
 }
 
 .container {
+  
   display: flex;
   justify-content: space-between;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   background-color: #31363F;
   width: 70vw;
-  height: 70vh; /* Aumentando a altura para acomodar mensagens de erro */
-  margin: auto;
+  height: 70vh; 
   margin-top: 10%;
 }
 
@@ -53,11 +52,11 @@ html {
 
 .login-form {
   width: 70%;
+  min-height: 10px;
 }
 
 .login-form input {
   width: 100%;
-  height: 25px;
   padding: 10px;
   margin-bottom: 15px;
   border: 1px solid #222831;
@@ -78,6 +77,7 @@ html {
   white-space: normal;
   overflow: visible;
 }
+
 
 .login-form button:hover {
   background-color: #70A0A0;
@@ -105,7 +105,7 @@ html {
   margin-top: 10px; /* Espaço acima da mensagem de erro */
 }
 
-@media (max-width: 800px) {
+@media (max-width: 700px) {
   .botoes {
     flex-direction: column;
   }
@@ -114,4 +114,21 @@ html {
     width: 100%;
     margin: 10px 0;
   }
+
+  .left-section {
+    display: none; 
+    height: min-content;
+  }
+
+  .right-section {
+    width: 100%;
+    height: 100%;
+  }
+
+  .container {
+    flex-direction: column; 
+    align-items: center; 
+  }
 }
+
+
